# ClownBot_py

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  bot.py  docker-compose.yaml  main.py  oauth.py  pyproject.toml  requirements.txt
bot/: bot.py  clown_commands.py  clowns.json  global_.py  helper_functions.py
src/clown_bot/: __init__.py  bot.py  config.py  db.py  helper_functions.py  main.py
src/clown_bot/commands/: clowns.py  games.py  general.py  wordle.py
src/tests/: conftest.py  test_db.py
templates/: index.html
